devops/tekton/tekton-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-websecure
  namespace: tekton-pipelines
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`tekton.tjpengan.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: tekton-dashboard
      passHostHeader: true
      port: 9097
  tls:
    secretName: tekton-secret
